force-app/main/default/src/objects/Loop__Form_Field__c/Loop__Form_Field__c.object-meta.xml
<CustomObject>
    <label>Form Field</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>