force-app/main/default/src/objects/Loop__Form_Field__c/fields/Loop__Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Loop__Default_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>