force-app/main/default/src/objects/Loop__Form_Field__c/fields/Loop__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Loop__Error_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The message displayed when the input value does not match the field validation.</inlineHelpText>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>