force-app/main/default/src/objects/Loop__Form_Field__c/fields/Loop__Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Loop__Help_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Help Text</label>
    <type>TextArea</type>
</CustomField>