force-app/main/default/src/objects/Loop__Form_Field__c/fields/Loop__List_Values__c.field-meta.xml
<CustomField>
    <fullName>Loop__List_Values__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>List Values</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>