force-app/main/default/src/objects/Loop__Form_Field__c/fields/Loop__SfDefault_Value__c.field-meta.xml
<CustomField>
    <fullName>Loop__SfDefault_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SfDefault Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>