force-app/main/default/src/objects/Loop__Form_Field__c/fields/Loop__Tag__c.field-meta.xml
<CustomField>
    <fullName>Loop__Tag__c</fullName>
    <description>The text in the document corresponding to this form field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>