force-app/main/default/src/objects/Loop__Form_Field__c/fields/Loop__Validation__c.field-meta.xml
<CustomField>
    <fullName>Loop__Validation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This can be any regular expression you wish to use to validate this field. See http://regexlib.com/CheatSheet.aspx</inlineHelpText>
    <label>Validation</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>